--- a/P2/Practica/docker-compose.yml
+++ b/P2/Practica/docker-compose.yml
@@ -1,11 +1,14 @@
 # docker-compose.yml
 services:
-  p1:
+  p2:
     build: ./e-commerce
     volumes:
       - ./e-commerce:/e-commerce
+    ports:
+      - 8000:8000
     depends_on:
       - mongo
+    command: python manage.py runserver 0.0.0.0:8000
 
   mongo:
     image: mongo:6.0
