practica 2.3 excepto que las imagenes no van

--- a/P2/Practica/e-commerce/Dockerfile
+++ b/P2/Practica/e-commerce/Dockerfile
@@ -3,4 +3,17 @@ FROM python:3.11-alpine
 
 WORKDIR /e-commerce
 COPY . /e-commerce
-RUN pip install -r requirements.txt
+
+RUN apk update && apk add --no-cache \
+        python3-dev py3-pip py3-setuptools \
+        libffi-dev libxml2-dev libxslt-dev \
+        tiff-dev jpeg-dev zlib-dev freetype-dev \
+        lcms2-dev libwebp-dev tcl tk tk-dev \
+        gcc musl-dev
+
+# Agregar las dependencias al contenedor e instalar las dependencias de Python
+ADD requirements.txt /tmp/requirements.txt
+RUN pip install -r /tmp/requirements.txt && rm /tmp/requirements.txt
+
+# Instalar Pillow
+RUN pip install Pillow
